--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,12 @@
+alembic==1.9.2
 Faker==16.6.0
 greenlet==2.0.1
+importlib-metadata==6.0.0
+importlib-resources==5.10.2
+Mako==1.2.4
+MarkupSafe==2.1.2
 psycopg2-binary==2.9.5
 python-dateutil==2.8.2
 six==1.16.0
 SQLAlchemy==1.4.46
+zipp==3.11.0
